fixed navbar overflow issue, added box-shadow transition to note

--- a/global.css
+++ b/global.css
@@ -3,7 +3,13 @@
 	padding: 0;
 	width: 45vw;
 	min-width: 300px;
+	max-width: 500px;
 	margin: 25px auto 0 auto;
+	transition: box-shadow 0.2s ease-in;
+}
+
+.note:hover {
+	box-shadow: 1px 1px 5px #ccc;
 }
 
 .note-content {
@@ -33,6 +39,7 @@
 	height: 50px;
 	width: 50px;
 }
+
 
 .grid {
 	margin: 0 auto;
